tests/baselines/reference/decoratorOnClassMethodThisParameter.errors.txt
tests/cases/conformance/decorators/class/method/parameter/decoratorOnClassMethodThisParameter.ts(4,17): error TS1359: Identifier expected. 'this' is a reserved word that cannot be used here.
tests/cases/conformance/decorators/class/method/parameter/decoratorOnClassMethodThisParameter.ts(4,17): error TS2680: A 'this' parameter must be the first parameter.


==== tests/cases/conformance/decorators/class/method/parameter/decoratorOnClassMethodThisParameter.ts (2 errors) ====
    declare function dec(target: Object, propertyKey: string | symbol, parameterIndex: number): void;
    
    class C {
        method(@dec this: C) {}
                    ~~~~
!!! error TS1359: Identifier expected. 'this' is a reserved word that cannot be used here.
                    ~~~~~~~
!!! error TS2680: A 'this' parameter must be the first parameter.
    }